# mmsegmentation

./: CMakeLists.txt  package.xml
launch/: segmentation.launch
mmseg/apis/: __init__.py  inference.py
ros_inference/: image_demo.py  ros_inference.py
