<?xml version="1.0"?>
<package format="2">
  <name>mmsegmentation</name>
  <description>
     Various semantic segmentation algorithms.
  </description>
  <version>1.0.0</version>
  <maintainer email="mfc@leomuhendislik.com">M. Fatih Cırıt</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_transport</exec_depend>

</package>
